--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
    "main": "hello.js",
    "author": "Launchcode",
    "license": "ISC",
+   "type": "module" ,
    "dependencies": {
+      "chalk": "^5.3.0",
       "readline-sync": "^1.4.10"
    }
 }
